--- a/README.Rmd
+++ b/README.Rmd
@@ -1,11 +1,17 @@
-# Beeswarm-style plots with base graphics and ggplot2
+---
+title: "Beeswarm-style plots with base graphics and ggplot2"
+
+output: 
+  html_document: 
+    keep_md: yes
+    toc: yes
+---
 
 `ggbeeswarm` provides a way to generate beeswarm-style plots using both R's default plotting system as well as [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
 
 ## Installation
 
-
-```r
+```{r, eval=FALSE}
 devtools::install_github("eclarke/ggbeeswarm")
 ```
 
@@ -14,8 +20,7 @@ devtools::install_github("eclarke/ggbeeswarm")
 ### Using base graphics
 
 We use the provided function `offset_x` to generate the x-offsets for plotting.
-
-```r
+```{r base-examples, tidy=FALSE, results='hide'}
 library(ggbeeswarm)
 # Generate data
 dat <- list(rnorm(50), rnorm(500), c(rnorm(100), rnorm(100,5)), rcauchy(100))
@@ -36,28 +41,14 @@ mapply(function(y, label) {
 }, dat, labels)
 ```
 
-![](README_files/figure-html/base-examples-1.png) 
-
 ### Using ggplot2
 
 `ggbeeswarm` provides a `position_beeswarm` extension to ggplot2:
-
-```r
+```{r ggplot2-examples}
 library(ggplot2)
 qplot(Species, Sepal.Length, data=iris, position=position_beeswarm())
-```
-
-![](README_files/figure-html/ggplot2-examples-1.png) 
-
-```r
 qplot(class, hwy, data=mpg, position=position_beeswarm())
-```
-
-![](README_files/figure-html/ggplot2-examples-2.png) 
-
-```r
 # Some groups may have only a few points. Use `var_width=TRUE` to adjust width dynamically.
 qplot(class, hwy, data=mpg, position=position_beeswarm(var_width = TRUE))
-```
 
-![](README_files/figure-html/ggplot2-examples-3.png) 
+```
