--- a/README.Rmd
+++ b/README.Rmd
@@ -58,9 +58,6 @@ qplot(class, hwy, data=mpg, position=position_beeswarm(var_width = TRUE))
 ```
 
 ------
-Authors:
-
-- Erik Clarke
-- Scott Sherrill-Mix
+Authors: Erik Clarke and Scott Sherrill-Mix
 
 Van der Corput sequence generator and helper functions from [https://stat.ethz.ch/pipermail/r-help/2008-May/162911.html](https://stat.ethz.ch/pipermail/r-help/2008-May/162911.html).
