var_width to varwidth to match boxplot args. I'd camelCase myself but good to match prior use

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,8 +52,8 @@ mapply(function(y, label) {
 library(ggplot2)
 qplot(Species, Sepal.Length, data=iris, position=position_beeswarm())
 qplot(class, hwy, data=mpg, position=position_beeswarm())
-# Some groups may have only a few points. Use `var_width=TRUE` to adjust width dynamically.
-qplot(class, hwy, data=mpg, position=position_beeswarm(var_width = TRUE))
+# Some groups may have only a few points. Use `varwidth=TRUE` to adjust width dynamically.
+qplot(class, hwy, data=mpg, position=position_beeswarm(varwidth = TRUE))
 
 ```
 
