Add beeswarm to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,14 +2,14 @@
 
 ## Introduction
 
-`ggbeeswarm` provides a way to generate beeswarm-style plots using both R's default plotting system as well as [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
+`violinpoint` provides a way to generate beeswarm-style plots using both R's default plotting system as well as [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
 
 Beeswarm plots (aka column scatter plots or violin scatter plots) are a way of plotting points that would ordinarily overlap so that they fall next to each other instead. In addition to reducing overplotting, it helps visualize the density of the data at each point (similar to a violin plot), while still showing each data point individually.
 
 ## Installation
 
 ```{r, eval=FALSE}
-devtools::install_github("eclarke/ggbeeswarm")
+devtools::install_github("eclarke/violinpoint")
 ```
 
 ## Examples
@@ -42,7 +42,7 @@ mapply(function(y, label) {
 
 ### Using ggplot2
 
-`ggbeeswarm` provides a `position_beeswarm` extension to ggplot2:
+`violinpoint` provides a `position_quasirandom` extension to ggplot2:
 ```{r ggplot2-examples}
 library(violinpoint)
 library(ggplot2)
@@ -52,6 +52,19 @@ qplot(class, hwy, data=mpg, position=position_quasirandom())
 qplot(class, hwy, data=mpg, position=position_quasirandom(varwidth = TRUE))
 
 ```
+
+### Using ggplot2 and beeswarm
+
+`violinpoint` provides a `position_beeswarm` extension to ggplot2:
+```{r ggplot2-beeswarm,dpi=200}
+library(violinpoint)
+library(ggplot2)
+qplot(Species, Sepal.Length, data=iris, position=position_beeswarm())
+qplot(class, hwy, data=mpg, position=position_beeswarm())
+qplot(class, hwy, data=mpg, position=position_beeswarm(priority = 'density',cex=3))
+
+```
+
 
 ------
 Authors: Erik Clarke and Scott Sherrill-Mix
