--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
-# Beeswarm-style plots with base graphics and ggplot2
+# Beeswarm-style plots with ggplot2
 
 ## Introduction
 
-`violinpoint` provides a way to generate beeswarm-style plots using both R's default plotting system as well as [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
+`violinpoint` provides a way to generate beeswarm-style plots using [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
 
 Beeswarm plots (aka column scatter plots or violin scatter plots) are a way of plotting points that would ordinarily overlap so that they fall next to each other instead. In addition to reducing overplotting, it helps visualize the density of the data at each point (similar to a violin plot), while still showing each data point individually.
 
@@ -14,36 +14,11 @@ devtools::install_github("eclarke/violinpoint")
 
 ## Examples
 
-### Using base graphics
-
-We use the provided function `offset_x` to generate the x-offsets for plotting.
-```{r base-examples, tidy=FALSE, results='hide'}
-set.seed(12345)
-
-library(violinpoint)
-# Generate data
-dat <- list(rnorm(50), rnorm(500), c(rnorm(100), rnorm(100,5)), rcauchy(100))
-labels <- c("Normal", "Dense Norm.", "Bimodal", "Extremes")
-
-# Plot distributions
-par(mfrow=c(4,1), mar=c(2,4, 0.5, 0.5))
-mapply(function(y, label) {
-  ids <- rep(1:4, each=length(y))
-  offsets <- c(
-    offset_x(y),  # Default
-    offset_x(y, adjust=2),    # More smoothing
-    offset_x(y, adjust=0.1),  # Tighter fit
-    offset_x(y, width=0.1))   # Less wide
-
-  plot(offsets + ids, rep(y, 4), ylab=label, xlab='', xaxt='n', pch=21, las=1)
-  axis(1, 1:4, c("Default", "Adjust=2", "Adjust=0.1", "Width=10%"))
-}, dat, labels)
-```
-
 ### Using ggplot2
 
 `violinpoint` provides a `position_quasirandom` extension to ggplot2:
 ```{r ggplot2-examples}
+set.seed(12345)
 library(violinpoint)
 library(ggplot2)
 qplot(Species, Sepal.Length, data=iris, position=position_quasirandom())
@@ -56,7 +31,7 @@ qplot(class, hwy, data=mpg, position=position_quasirandom(varwidth = TRUE))
 ### Using ggplot2 and beeswarm
 
 `violinpoint` provides a `position_beeswarm` extension to ggplot2:
-```{r ggplot2-beeswarm,dpi=200}
+```{r ggplot2-beeswarm}
 library(violinpoint)
 library(ggplot2)
 qplot(Species, Sepal.Length, data=iris, position=position_beeswarm())
