--- a/README.Rmd
+++ b/README.Rmd
@@ -1,25 +1,39 @@
+---
+output: 
+  html_document: 
+    keep_md: yes
+---
 # Beeswarm-style plots with ggplot2
 
 ## Introduction
-
-`violinpoint` provides a way to generate beeswarm-style plots using [ggplot2](http://ggplot2.org). It uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. See the examples below.
-
 Beeswarm plots (aka column scatter plots or violin scatter plots) are a way of plotting points that would ordinarily overlap so that they fall next to each other instead. In addition to reducing overplotting, it helps visualize the density of the data at each point (similar to a violin plot), while still showing each data point individually.
+
+`ggbeeswarm` provides two different methods to create beeswarm-style plots using [ggplot2](http://ggplot2.org). It does this by adding two new ggplot Position objects:
+
+- `position_quasirandom`: Uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. This uses [sherrillmix/violinpoint](https://github.com/sherrillmix/violinpoint).
+
+- `position_beeswarm`: Uses the [beeswarm](https://cran.r-project.org/web/packages/beeswarm/index.html) library to do point-size based offset. 
+
+See the examples below.
+
 
 ## Installation
 
 ```{r, eval=FALSE}
-devtools::install_github("eclarke/violinpoint")
+# Until Scott's violinpoint code is on CRAN, we need this step first:
+devtools::install_github("sherrillmix/violinpoint")
+# And until this package is on CRAN:
+devtools::install_github("eclarke/ggbeeswarm")
 ```
 
 ## Examples
 
-### Using ggplot2
+### position_quasirandom()
 
-`violinpoint` provides a `position_quasirandom` extension to ggplot2:
+Using `position_quasirandom`:
 ```{r ggplot2-examples}
 set.seed(12345)
-library(violinpoint)
+library(ggbeeswarm)
 library(ggplot2)
 qplot(Species, Sepal.Length, data=iris, position=position_quasirandom())
 qplot(class, hwy, data=mpg, position=position_quasirandom())
@@ -28,15 +42,20 @@ qplot(class, hwy, data=mpg, position=position_quasirandom(varwidth = TRUE))
 
 ```
 
-### Using ggplot2 and beeswarm
+### position_beeswarm()
 
-`violinpoint` provides a `position_beeswarm` extension to ggplot2:
+Using `position_beeswarm`:
 ```{r ggplot2-beeswarm}
-library(violinpoint)
+library(ggbeeswarm)
 library(ggplot2)
+
 qplot(Species, Sepal.Length, data=iris, position=position_beeswarm())
 qplot(class, hwy, data=mpg, position=position_beeswarm())
-qplot(class, hwy, data=mpg, position=position_beeswarm(priority = 'density',cex=3))
+# ggplot doesn't pass any information about the actual device size of the points
+# to the underlying layout code, so it's important to manually adjust the `cex` 
+# parameter for best results
+qplot(class, hwy, data=mpg, position=position_beeswarm(priority = 'density', cex=5))
+qplot(Species, jitter(Sepal.Length), data=iris, position=position_beeswarm(cex=4))
 
 ```
 
