updated readme for more legible figures and automatic dodging examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,17 +2,31 @@
 output: 
   html_document: 
     keep_md: yes
+    toc: yes
 ---
+```{r setup, echo=FALSE, message=FALSE}
+knitr::opts_chunk$set(
+  fig.retina=2,
+  fig.width=6,
+  fig.height=4
+)
+```
+
 # Beeswarm-style plots with ggplot2
 
 ## Introduction
 Beeswarm plots (aka column scatter plots or violin scatter plots) are a way of plotting points that would ordinarily overlap so that they fall next to each other instead. In addition to reducing overplotting, it helps visualize the density of the data at each point (similar to a violin plot), while still showing each data point individually.
 
-`ggbeeswarm` provides two different methods to create beeswarm-style plots using [ggplot2](http://ggplot2.org). It does this by adding two new ggplot Geom objects:
+`ggbeeswarm` provides two different methods to create beeswarm-style plots using [ggplot2](http://ggplot2.org). It does this by adding two new ggplot geom objects:
 
 - `geom_quasirandom`: Uses a [van der Corput sequence](http://en.wikipedia.org/wiki/Van_der_Corput_sequence) to space the dots to avoid overplotting. This uses [sherrillmix/vipor](https://github.com/sherrillmix/vipor).
 
 - `geom_beeswarm`: Uses the [beeswarm](https://cran.r-project.org/web/packages/beeswarm/index.html) library to do point-size based offset. 
+
+Features: 
+
+- Can handle categorical variables on the y-axis (thanks @smsaladi)
+- Automatically dodges if a grouping variable is categorical and `dodge.width` is specified (thanks @josesho)
 
 See the examples below.
 
@@ -20,7 +34,7 @@ See the examples below.
 ## Installation
 
 ```{r, eval=FALSE}
-# And until this package is on CRAN:
+# Until this package is on CRAN:
 devtools::install_github("eclarke/ggbeeswarm")
 ```
 
@@ -33,7 +47,7 @@ Using `geom_quasirandom`:
 set.seed(12345)
 library(ggplot2)
 library(ggbeeswarm)
-qplot(Species, Sepal.Length, data=iris)+ geom_quasirandom()
+qplot(Species, Sepal.Length, data=iris) + geom_quasirandom()
 qplot(class, hwy, data=mpg, geom="quasirandom")
 
 # With categorical y-axis
@@ -42,6 +56,9 @@ qplot(hwy, class, data=mpg, geom='quasirandom')
 # Some groups may have only a few points. Use `varwidth=TRUE` to adjust width dynamically.
 qplot(class, hwy, data=mpg) + geom_quasirandom(varwidth = TRUE)
 
+# Automatic dodging
+sub_mpg <- mpg[mpg$class %in% c("midsize", "pickup", "suv"),]
+ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_quasirandom(dodge.width=1)
 ```
 
 ### geom_beeswarm()
@@ -57,9 +74,11 @@ qplot(hwy, class, data=mpg, geom='beeswarm')
 # ggplot doesn't pass any information about the actual device size of the points
 # to the underlying layout code, so it's important to manually adjust the `cex` 
 # parameter for best results
-qplot(class, hwy, data=mpg)+ geom_beeswarm(cex=5)
-qplot(Species, Sepal.Length, data=iris) +geom_beeswarm(cex=4,priority='density')
+qplot(class, hwy, data=mpg) + geom_beeswarm(cex=5)
+qplot(Species, Sepal.Length, data=iris) + geom_beeswarm(cex=4,priority='density')
 
+# With automatic dodging
+ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.7, cex=4)
 ```
 
 
