--- a/README.Rmd
+++ b/README.Rmd
@@ -47,14 +47,14 @@ Using `geom_quasirandom`:
 set.seed(12345)
 library(ggplot2)
 library(ggbeeswarm)
-qplot(Species, Sepal.Length, data=iris) + geom_quasirandom()
-qplot(class, hwy, data=mpg, geom="quasirandom")
+ggplot(iris,aes(Species, Sepal.Length)) + geom_quasirandom()
+ggplot(mpg,aes(class, hwy), geom="quasirandom")
 
 # With categorical y-axis
-qplot(hwy, class, data=mpg, geom='quasirandom')
+ggplot(mpg,aes(hwy, class), geom='quasirandom')
 
 # Some groups may have only a few points. Use `varwidth=TRUE` to adjust width dynamically.
-qplot(class, hwy, data=mpg) + geom_quasirandom(varwidth = TRUE)
+ggplot(mpg,aes(class, hwy)) + geom_quasirandom(varwidth = TRUE)
 
 # Automatic dodging
 sub_mpg <- mpg[mpg$class %in% c("midsize", "pickup", "suv"),]
@@ -66,16 +66,16 @@ ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_quasirandom(dodge.w
 Using `geom_beeswarm`:
 ```{r ggplot2-beeswarm}
 
-qplot(Species, Sepal.Length, data=iris) + geom_beeswarm()
-qplot(class, hwy, data=mpg, geom='beeswarm')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm()
+ggplot(mpg,aes(class, hwy), geom='beeswarm')
 # With categorical y-axis
-qplot(hwy, class, data=mpg, geom='beeswarm')
+ggplot(mpg,aes(hwy, class), geom='beeswarm')
 
 # ggplot doesn't pass any information about the actual device size of the points
 # to the underlying layout code, so it's important to manually adjust the `cex` 
 # parameter for best results
-qplot(class, hwy, data=mpg) + geom_beeswarm(cex=5)
-qplot(Species, Sepal.Length, data=iris) + geom_beeswarm(cex=4,priority='density')
+ggplot(mpg,aes(class, hwy)) + geom_beeswarm(cex=5)
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex=4,priority='density')
 
 # With automatic dodging
 ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.7, cex=4)
