--- a/README.Rmd
+++ b/README.Rmd
@@ -48,10 +48,10 @@ set.seed(12345)
 library(ggplot2)
 library(ggbeeswarm)
 ggplot(iris,aes(Species, Sepal.Length)) + geom_quasirandom()
-ggplot(mpg,aes(class, hwy), geom="quasirandom")
+ggplot(mpg,aes(class, hwy)) + geom_quasirandom()
 
 # With categorical y-axis
-ggplot(mpg,aes(hwy, class), geom='quasirandom')
+ggplot(mpg,aes(hwy, class)) + geom_quasirandom()
 
 # Some groups may have only a few points. Use `varwidth=TRUE` to adjust width dynamically.
 ggplot(mpg,aes(class, hwy)) + geom_quasirandom(varwidth = TRUE)
@@ -67,9 +67,9 @@ Using `geom_beeswarm`:
 ```{r ggplot2-beeswarm}
 
 ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm()
-ggplot(mpg,aes(class, hwy), geom='beeswarm')
+ggplot(mpg,aes(class, hwy)) + geom_beeswarm()
 # With categorical y-axis
-ggplot(mpg,aes(hwy, class), geom='beeswarm')
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm()
 
 # ggplot doesn't pass any information about the actual device size of the points
 # to the underlying layout code, so it's important to manually adjust the `cex` 
