--- a/vignettes/usageExamples.Rnw
+++ b/vignettes/usageExamples.Rnw
@@ -34,7 +34,7 @@ packageKeywords<-"visualization, display, one dimensional, grouped, groups, viol
 
 This is the simplest example of using \code{geom_quasirandom} to generate violin scatter plots:
 <<ggPlot, echo=TRUE, eval=FALSE>>=
-  library(vipor)
+  library(ggbeeswarm)
   set.seed(12345)
   n<-100
   dat<-rnorm(n*2)
@@ -50,41 +50,27 @@ This is the simplest example of using \code{geom_quasirandom} to generate violin
 
 
 Normal \code{ggplot} options can be used:
-<<vpOpts, echo=TRUE, eval=FALSE>>=
+<<ggOpts, echo=TRUE, eval=FALSE>>=
   ggplot(mapping=aes(labs, dat)) + geom_quasirandom(aes(color=labs))
 @
 
 \begin{center}
-<<showVpOpts, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
-<<vpOpts>>
+<<showGgOpts, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
+<<ggOpts>>
 @
 \end{center}
 
-%Factors can be used to generate custom group orderings:
-%<<vpFactors, echo=TRUE, eval=FALSE>>=
-%  labs2<-factor(labs,levels=c('b','a'))
-%  vpPlot(labs2,dat,las=1,ylab='Data',col=rep(1:2,n))
-%  abline(h=0,lty=2)
-%@
-%\begin{center}
-%<<showVpFactors, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
-%<<vpFactors>>
-%@
-%\end{center}
-%
-%For custom plotting, the offsets for a group of points can be calculated using the \code{offsetX} function. The adjusted x position of the points is also returned invisibly from \code{vpPlot}:
-%<<offsetX, echo=TRUE, eval=TRUE>>=
-%  offsets<-offsetX(dat,labs)
-%  head(offsets,4)
-%  xPos<-vpPlot(labs,dat)
-%  head(xPos,4)
-%  xPos2<-rep(1:2,n)+offsets
-%  head(xPos2,4)
-%  all(xPos==xPos2)
-%@
-%Note that \code{offsetX} returns offsets centered around 0 which will need to be added to the original x positions.
-%
-%
+Factors can be used to generate custom group orderings:
+<<ggFactors, echo=TRUE, eval=FALSE>>=
+  labs2<-factor(labs,levels=c('b','a'))
+  ggplot(mapping=aes(labs2, dat)) + geom_quasirandom(aes(color=labs))
+@
+\begin{center}
+<<showGgFactors, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
+<<ggFactors>>
+@
+\end{center}
+
 %\section{Options}
 %\code{offsetX} calls \code{stats::density} to compute kernel density estimates. The tightness of the fit can be adjusted with the \code{adjust} option and the width of the offset with \code{width}. \code{nbins} to adjust the number of bins used in the kernel density is also provided but this can usually be left at its default when using quasirandom offsets:
 %
