--- a/vignettes/usageExamples.Rnw
+++ b/vignettes/usageExamples.Rnw
@@ -71,60 +71,48 @@ Factors can be used to generate custom group orderings:
 @
 \end{center}
 
-%\section{Options}
-%\code{offsetX} calls \code{stats::density} to compute kernel density estimates. The tightness of the fit can be adjusted with the \code{adjust} option and the width of the offset with \code{width}. \code{nbins} to adjust the number of bins used in the kernel density is also provided but this can usually be left at its default when using quasirandom offsets:
-%
-%<<distAdjust, echo=TRUE, eval=FALSE>>=
-%  dat <- list(
-%    'Normal'=rnorm(50),
-%    'Dense normal'= rnorm(500),
-%    'Bimodal'=c(rnorm(100), rnorm(100,5)),
-%    'Extremes'=rcauchy(100)
-%  )
-%  par(mfrow=c(4,1), mar=c(2.5,3.1, 1.2, 0.5),mgp=c(2.1,.75,0),
-%  cex.axis=1.2,cex.lab=1.2,cex.main=1.2)
-%  dummy<-sapply(names(dat),function(label) {
-%    y<-dat[[label]]
-%    offsets <- list(
-%      'defaults'=offsetX(y),  # Default
-%      'adjust=2'=offsetX(y, adjust=2),    # More smoothing
-%      'adjust=.1'=offsetX(y, adjust=0.1),  # Tighter fit
-%      'width=.1'=offsetX(y, width=0.1),    # Less wide
-%      'nbins=100'=offsetX(y, nbins=100)    # Less bins
-%    )  
-%    ids <- rep(1:length(offsets), each=length(y))
-%    plot(unlist(offsets) + ids, rep(y, length(offsets)), ylab='y value',
-%      xlab='', xaxt='n', pch=21,
-%      col='#00000099',bg='#00000033',las=1,main=label)
-%    axis(1, 1:length(offsets), names(offsets))
-%  })
-%@
-%\begin{center}
-%<<showDistAdjust, fig=TRUE, height=6, width=6, echo=FALSE>>=
-%<<distAdjust>>
-%@
-%\end{center}
-%
-%The \code{varwidth} argument scales the width of a group by the square root of the number of observations in that group (as in the function \code{boxplot}). Arguments to \code{offsetX} can be passed into \code{vpPlot} as a list through the \code{offsetXArgs} argument.
-%
-%<<varwidth, echo=TRUE, eval=FALSE>>=
-%  dat <- list(
-%    '10 points'=rnorm(10),
-%    '50 points'=rnorm(50,2),
-%    '200 points'=c(rnorm(400), rnorm(100,5)),
-%    '5000 points'= rnorm(5000,1)
-%  )
-%  labs<-rep(names(dat),sapply(dat,length))
-%  labs<-factor(labs,levels=unique(labs))
-%  vpPlot( labs,unlist(dat),offsetXArgs=list(varwidth=TRUE),
-%    las=1,ylab='Value',col='#00000066',bg='#00000022',pch=21)
-%@
-%\begin{center}
-%<<showVarwidth, fig=TRUE, height=4, width=6, echo=FALSE>>=
-%<<varwidth>>
-%@
-%\end{center}
-%
+\section{Options}
+\code{quasirandom} calls \code{vipor::offsetX} which calls \code{stats::density} to compute kernel density estimates. The tightness of the fit can be adjusted with the \code{adjust} option and the width of the offset with \code{width}. \code{nbins} to adjust the number of bins used in the kernel density is also provided but this can usually be left at its default when using quasirandom offsets but is useful for non-quasirandom methods:
+
+<<distAdjust, echo=TRUE, eval=FALSE>>=
+  dat <- list(
+    'Normal'=rnorm(50),
+    'Dense normal'= rnorm(500),
+    'Bimodal'=c(rnorm(100), rnorm(100,5)),
+    'Extremes'=rcauchy(100)
+  )
+  labs<-rep(names(dat),sapply(dat,length),levels=names(dat))
+  dat<-unlist(dat)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(bandwidth=2)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(bandwidth=.1)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(width=.1)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(nbins=100)
+@
+\begin{center}
+<<showDistAdjust, fig=TRUE, height=6, width=6, echo=FALSE>>=
+<<distAdjust>>
+@
+\end{center}
+
+The \code{varwidth} argument scales the width of a group by the square root of the number of observations in that group (as in the function \code{boxplot}):
+<<varwidth, echo=TRUE, eval=FALSE>>=
+  dat <- list(
+    '10 points'=rnorm(10),
+    '50 points'=rnorm(50,2),
+    '200 points'=c(rnorm(400), rnorm(100,5)),
+    '5000 points'= rnorm(5000,1)
+  )
+  labs<-rep(names(dat),sapply(dat,length))
+  labs<-factor(labs,levels=unique(labs))
+  dat<-unlist(dat)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(varwidth=TRUE)
+@
+\begin{center}
+<<showVarwidth, fig=TRUE, height=4, width=6, echo=FALSE>>=
+<<varwidth>>
+@
+\end{center}
+
 %\section{Real data}
 %An example using the \code{beaver1} and \code{beaver2} data from the \pkg{datasets} package:
 %<<vpBeaver, echo=TRUE, eval=FALSE>>=
