--- a/inst/doc/usageExamples.Rnw
+++ b/inst/doc/usageExamples.Rnw
@@ -185,7 +185,7 @@ The \code{varwidth} argument scales the width of a group by the square root of t
   labs<-rep(names(dat),sapply(dat,length))
   labs<-factor(labs,levels=unique(labs))
   dat<-unlist(dat)
-  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(varwidth=TRUE)
+  ggplot(mapping=aes(labs, dat)) + geom_quasirandom(alpha=.3,varwidth=TRUE)
 @
 \begin{center}
 <<showVarwidth, fig=TRUE, height=4, width=6, echo=FALSE>>=
@@ -216,8 +216,8 @@ An example using the \code{integrations} data from the \pkg{vipor} package:
   library(vipor)
   ints<-integrations[integrations$nearestGene>0,]
   ints$logGeneDist<-log(ints$nearestGene)
-  ggplot(ints,mapping=aes(study, logGeneDist,color=latent,alpha=.2)) +
-  geom_quasirandom(dodge.width=1)
+  ggplot(ints,mapping=aes(study, logGeneDist,color=latent)) +
+  geom_quasirandom(dodge.width=1,alpha=.4)
 @
 \begin{center}
 <<showGene, fig=TRUE, height=4, width=6, echo=FALSE>>=
