--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ devtools::install_github("eclarke/ggbeeswarm")
 ```
 
 ## Examples
-For comparison, here is an comparing `geom_jitter` and `geom_quasirandom` on the `iris` dataset:
+Here is a comparison between `geom_jitter` and `geom_quasirandom` on the `iris` dataset:
 ```{r ggplot2-compare}
 set.seed(12345)
 library(ggplot2)
