Tweak README for new geom_beeswarm. Rerender figures

--- a/README.Rmd
+++ b/README.Rmd
@@ -92,16 +92,17 @@ Using `geom_beeswarm`:
 ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm()
 ggplot(mpg,aes(class, hwy)) + geom_beeswarm()
 # With categorical y-axis
-ggplot(mpg,aes(hwy, class)) + geom_beeswarm()
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm(cex=1.2)
 
 # ggplot doesn't pass any information about the actual device size of the points
 # to the underlying layout code, so it's important to manually adjust the `cex` 
 # parameter for best results
-ggplot(mpg,aes(class, hwy)) + geom_beeswarm(cex=5)
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex=4,priority='density')
+# Also watch out for points escaping from the plot with geom_beeswarm
+ggplot(mpg,aes(class, hwy)) + geom_beeswarm(cex=1.1)
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex=1.2,priority='density')
 
 # With automatic dodging
-ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.7, cex=4)
+ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.5)
 ```
 
 
