Tweak vignette for new geom_beeswarm. Rerender

--- a/inst/doc/usageExamples.Rnw
+++ b/inst/doc/usageExamples.Rnw
@@ -102,7 +102,8 @@ Or on the y-axis:
 
 And with \code{geom_beeswarm}:
 <<dodgeBee, echo=TRUE, eval=FALSE>>= labs2<-factor(rep(1:2,each=n))
-  ggplot(mapping=aes(labs,dat,color=labs2)) + geom_beeswarm(dodge.width=.8)
+  ggplot(mapping=aes(labs,dat,color=labs2)) +
+    geom_beeswarm(dodge.width=.8,cex=2)
 @
 \begin{center}
 <<showDodgeBee, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
@@ -110,7 +111,8 @@ And with \code{geom_beeswarm}:
 @
 \end{center}
 <<dodgeYBee, echo=TRUE, eval=FALSE>>=
-  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_beeswarm(dodge.width=.8)
+  ggplot(mapping=aes(dat,labs,color=labs2)) +
+    geom_beeswarm(dodge.width=.8,cex=2)
 @
 \begin{center}
 <<showDodgeYBee, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
@@ -189,7 +191,7 @@ The first four options are included within \code{geom_quasirandom} using the \co
     ggtitle('tukey') + labs(x='') +
     theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
   p6<-ggplot(mapping=aes(labs, dat)) +
-    geom_beeswarm(alpha=.2,cex=8,size=.75) +
+    geom_beeswarm(alpha=.2,size=.75) +
     ggtitle('geom_beeswarm') + labs(x='') +
     theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
   grid.arrange(p1, p2, p3, p4, p5, p6, ncol=3)
