--- a/vignettes/usageExamples.Rnw
+++ b/vignettes/usageExamples.Rnw
@@ -184,7 +184,7 @@ The first four options are included within \code{geom_quasirandom} using the \co
     theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
   p4<-ggplot(mapping=aes(labs, dat)) +
     geom_quasirandom(method='frowney',alpha=.2) +
-    ggtitle('smiley') + labs(x='') +
+    ggtitle('frowney') + labs(x='') +
     theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
   p5<-ggplot(mapping=aes(labs, dat)) +
     geom_quasirandom(method='tukey',alpha=.2) +
